--- a/404.html
+++ b/404.html
@@ -22,13 +22,13 @@
                 location.href = tmp+"discuss/post/"+href[1]+"/";
             }
             else {
-                exec.innerHTML = "値が間違っています";              
+                location.href = "https://fzif.github.io/";              
             }
         }
     </script>
 </head>
 <body onload="redirect()">
-    <div id="wrong"></div>
+    <div id="wrong">リダイレクト中</div>
     
 </body>
 </html>
