--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <h2>略称 Y3S (yuzupon1133's shortenURL system service)</h2>
     <div class="line">
         <h3>ユーザー</h3>
-        &emsp;<p style="user-select: all;">fzif.github.io/u/yuzupon1133-sub/</p>
+        <p style="user-select: all;">fzif.github.io/u/yuzupon1133-sub/</p>
     </div>
     <div class="line">
         <h3>プロジェクト</h3>
-        &emsp;<p style="user-select: all;">fzif.github.io/p/566208230/</p>
+        <p style="user-select: all;">fzif.github.io/p/566208230/</p>
     </div>
     <div class="line">
         <h3>スタジオ</h3>
-        &emsp;<p style="user-select: all;">fzif.github.io/s/30228207/</p>
+        <p style="user-select: all;">fzif.github.io/s/30228207/</p>
     </div>
     <div class="line">
         <h3>フォーラム</h3>
-        &emsp;<p style="user-select: all;">fzif.github.io/f/5502962/</p>
+        <p style="user-select: all;">fzif.github.io/f/5502962/</p>
     </div>
     <hr>
     <h2>shortenURL 作成</h2>
